# nook

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
nook/: __init__.py  commands.py  main.py  utils.py
tests/: test_cli.py  test_utils.py  utils.py
